--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="theme-color" content="#000000" />
   
-<title>امسح الكود</title>
+<title>MIKHMON QR CODE SCANNER</title>
   <style>
     body{
       background-color: #000000;
@@ -73,11 +73,11 @@
         <div style="display: table;">
           <div style="display: table-row;">
             <div style="display: table-cell; padding:3px;">
-              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i>اقلب الكاميرا</div>
+              <div class="btn" id="reload" onclick="location.reload();"><i class="icon icon-arrows-cw">&#xe800;</i> Reload Camera</div>
             </div>
             <div style="display: table-cell; padding:3px;">
               <!-- <div class="btn" onclick="document.location = 'googlechrome://navigate?url=https://laksa19.github.io/myqr/';"></div> -->
-              <a class="btn" href="intent://taqee-alghanimi.github.io/me#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i>افتح المتصفح</a>
+              <a class="btn" href="intent://laksa19.github.io/myqr#Intent;scheme=http;package=com.android.chrome;end"><i class="icon icon-chrome-1">&#xf268;</i> Open in Chrome</a>
             </div>
           </div>
         </div>
